--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,4 +1,19 @@
 {
+  "name": "Commit Explainer",
+  "short_name": "Commit Explainer",
+  "icons": [
+    {
+      "src": "android-chrome-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "android-chrome-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ],
   "theme_color": "rgb(0 0 0)",
-  "background_color": "rgb(0 0 0)"
+  "background_color": "rgb(0 0 0)",
+  "display": "standalone"
 }
